--- a/examples/nx/package.json
+++ b/examples/nx/package.json
@@ -1,6 +1,6 @@
 {
   "license": "MIT",
-  "repository": "https://github.com/vercel/remote-cache/tree/main/examples/nx",
+  "repository": "https://github.com/khulnasoft/remote-cache/tree/main/examples/nx",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -29,7 +29,7 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
-    "@vercel/remote-nx": "^1.1.1",
+    "@khulnasoft/remote-nx": "^1.1.1",
     "babel-jest": "^29.4.1",
     "eslint": "~8.46.0",
     "eslint-config-next": "13.4.1",
