--- a/examples/rush/common/autoinstallers/rush-plugins/package.json
+++ b/examples/rush/common/autoinstallers/rush-plugins/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@vercel/remote-rush": "latest"
+    "@khulnasoft/remote-rush": "latest"
   }
 }
