--- a/examples/rush/common/autoinstallers/rush-plugins/rush-plugins/@vercel/remote-rush/rush-plugin-manifest.json
+++ b/examples/rush/common/autoinstallers/rush-plugins/rush-plugins/@vercel/remote-rush/rush-plugin-manifest.json
@@ -2,10 +2,10 @@
   "$schema": "https://developer.microsoft.com/json-schemas/rush/v5/rush-plugin-manifest.schema.json",
   "plugins": [
     {
-      "pluginName": "rush-vercel-remote-cache-plugin",
-      "description": "Rush plugin for Vercel Remote cache",
+      "pluginName": "rush-khulnasoft-remote-cache-plugin",
+      "description": "Rush plugin for Khulnasoft Remote cache",
       "entryPoint": "dist/index.js",
-      "optionsSchema": "lib/vercel-remote-cache-config.schema.json"
+      "optionsSchema": "lib/khulnasoft-remote-cache-config.schema.json"
     }
   ]
 }
