--- a/examples/rush/common/config/rush-plugins/rush-vercel-khulnasoft-cache-plugin.json
+++ b/examples/rush/common/config/rush-plugins/rush-vercel-khulnasoft-cache-plugin.json
@@ -1,5 +1,5 @@
 {
   // Later we will uncomment this line and replace `<teamId>` with your 
-  // Vercel team ID so you can share build artifacts with your team.
+  // Khulnasoft team ID so you can share build artifacts with your team.
   // "teamId": "<teamId>"
 }
