--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@changesets/cli": "^2.24.4",
+    "@khulnasoft/style-guide": "5.3.0-canary.1",
     "@types/node": "12.20.24",
     "@typescript-eslint/parser": "^5.36.1",
-    "@vercel/style-guide": "4.0.2",
     "doctoc": "^2.2.0",
-    "eslint": "^8.24.0",
+    "eslint": "^8.48.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-turbo": "latest",
-    "prettier": "latest",
+    "prettier": "^3.0.0",
     "tsconfig": "workspace:^",
     "tsup": "^5.11.11",
     "turbo": "latest",
@@ -40,6 +40,6 @@
     "pnpm": ">=8.0.0",
     "node": ">=18.0.0"
   },
-  "prettier": "@vercel/style-guide/prettier",
+  "prettier": "@khulnasoft/style-guide/prettier",
   "packageManager": "pnpm@8.11.0"
 }
