--- a/packages/remote-nx/package.json
+++ b/packages/remote-nx/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@vercel/remote-nx",
+  "name": "@khulnasoft/remote-nx",
   "version": "1.1.1",
-  "description": "Remote caching for @nrwl/nx using Vercel Remote Cache",
+  "description": "Remote caching for @nrwl/nx using Khulnasoft Remote Cache",
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -17,7 +17,7 @@
     "clean:build": "rm -rf dist"
   },
   "keywords": [
-    "vercel",
+    "khulnasoft",
     "nx",
     "remote",
     "cache",
@@ -26,7 +26,7 @@
     "storage",
     "typescript"
   ],
-  "author": "Vercel",
+  "author": "Khulnasoft",
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@nx/workspace": "^16.3.2",
@@ -36,7 +36,7 @@
     "vitest": "^0.32.0"
   },
   "dependencies": {
-    "@vercel/remote": "workspace:*",
+    "@khulnasoft/remote": "workspace:*",
     "chalk": "^4.1.0",
     "nx-remotecache-custom": "^4.0.0"
   }
