--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "typescript": "^4.8.0"
   },
   "engines": {
-    "pnpm": "7.33.6",
+    "pnpm": ">=8.0.0",
     "node": ">=18.0.0"
   },
   "prettier": "@khulnasoft/style-guide/prettier",
