--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -20,7 +20,7 @@
     "url": "git+https://github.com/khulnasoft/remote-cache.git"
   },
   "keywords": [],
-  "author": "Jared Palmer",
+  "author": "Md Sulaiman",
   "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/khulnasoft/remote-cache/issues"
